<resources>
    <string name="app_name">OnlineShop</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="imageProductDescription">product image</string>
    <string name="best_products">پرفروش ترین محصولات</string>
    <string name="latest_products">جدیدترین محصولات </string>
    <string name="popular_products">محبوب ترین محصولات</string>
    <string name="most_visited">پر بازدیدترین</string>

    <string name="home">خانه</string>
    <string name="shopping_cart">سبد خرید</string>
    <string name="product_category">دسته بندی محصولات</string>
    <string name="suggest">پیشنهاد ویژه</string>
    <string name="login_or_signup">ورود و ثبت نام</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_list">لیست کامل</string>
    <string name="network_connection_error">خطا در اتصال به اینترنت!</string>
    <string name="check_network_setting">بررسی تنظیمات شبکه</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="sort">مرتب سازی</string>
    <string name="filter">فیلتر</string>

    <string name="sum_prices">جمع کل خرید</string>
    <string name="toman">تومان</string>
    <string name="total_price">قیمت کل</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="delete">حذف</string>
    <string name="sale">تخفیف شگفت انگیز</string>
    <string name="forget_my_password">کلمه عبورم را فراموشم کردم</string>
    <string name="register">ثبت نام در فروشگاه</string>
    <string name="hint_username">شماره موبايل يا ايميل</string>
    <string name="hint_password">کلمه عبور</string>
    <string name="show_password">نمایش کلمه عبور</string>
    <string name="login">ورود به فروشگاه</string>


</resources>
