<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_product"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:contentDescription="@string/imageProductDescription"
                android:padding="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_product"
                app:layout_constraintTop_toTopOf="@id/image_view_product">

                <TextView
                    android:id="@+id/text_view_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:padding="4dp"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/text_view_product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:backgroundTint="@color/colorLightGreen" />

                <TextView
                    android:id="@+id/text_view_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightGreen" />

                <TextView
                    android:id="@+id/text_view_product_price_on_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:orientation="horizontal"
            android:padding="@dimen/margin_layout_low">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/total_price"
                android:textColor="@color/colorDarkGreen" />

            <TextView
                android:id="@+id/text_view_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/toman"
                android:textColor="@color/colorDarkGreen" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:orientation="horizontal"
            android:padding="@dimen/margin_layout_low">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/final_price"
                android:textColor="@color/colorDarkGreen" />

            <TextView
                android:id="@+id/text_view_final_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/toman"
                android:textColor="@color/colorDarkGreen"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:orientation="horizontal"
            android:padding="@dimen/margin_layout_low">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/sale"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/text_view_sale_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/toman"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/delete"
            android:gravity="end"
            android:layout_margin="@dimen/margin_layout_low"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
</layout>